# weSign

./: .gitignore  BACKEND_API_DOCUMENTATION.md  COMPLETE_ENDPOINT_MAP.md  DOCUMENTATION_INDEX.md  INTEGRATION_FIXES_APPLIED.md  INTEGRATION_SCAN_REPORT.md  INTEGRATION_SETUP_GUIDE.md  INTEGRATION_SUMMARY.md  INTEGRATION_VALIDATION.md  MOBILE_CLOUD_DEPLOYMENT.md  NETWORK_CONFIG_GUIDE.md  QUICK_REFERENCE.md  README.md  REMOTE_TESTING.md  WEB_DEPLOYMENT.md  cert-generator.js  generate-certs.js  index.html  package-lock.json  package.json  signaling-server.js  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1775753924390-96f0a7bd6dae5.mjs
Backend full/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  railway.toml  server.js
Frontend/: .dockerignore  .env.example  .env.production  Dockerfile  FIXES_DOCUMENTATION.md  eslint.config.js  index.html  package-lock.json  package.json  signaling-server.js  tailwind.config.js  vite.config.ts
TestingFinal/: .env.example  Dockerfile  README.md  build_sign_sidecar.ps1  livetesting.py  lstm_model.py  requirements.txt  session_manager.py  sign_inference.py  sign_paths.py  sign_server.py  sign_server.spec  start_sign_server.py
certs/: key.pem
docs/: FLUTTER_BACKEND.md  ai_processing_pipeline.mmd  architecture_diagram.md  architecture_diagram.mmd  backend_api_diagram.md  backend_api_diagram.mmd  backend_database_diagram.md  backend_database_diagram.mmd  database_erd.mmd  download_diagrams.js  export_diagram_png.js  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+101 files in other folders)
